--- a/week3/LAB3/lab3.css
+++ b/week3/LAB3/lab3.css
@@ -33,6 +33,8 @@ h1 {
     margin-top: 100px;
     margin-left: 150px;
     margin-right: 150px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 #projects {
@@ -40,6 +42,8 @@ h1 {
     margin-top: 100px;
     margin-left: 150px;
     margin-right: 150px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 #footer {
