--- a/week3/LAB3/lab3.css
+++ b/week3/LAB3/lab3.css
@@ -47,10 +47,13 @@ h1 {
 }
 
 #footer {
-    margin-top: 50px;
+    margin-top: 100px;
     background-color: darkslategrey;
+    padding-top: 35px;
+    padding-bottom: 35px;
 
 }
+
 h3, h3, h3 {
     text-align:center;
 }
